added image and other elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element</p>
-<a href="https://google.com" target="_blank" title="let's go to google">Click Me!!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>test page</title>
+</head>
+<body>
+	<h1>Moonshine Cybin Fan Account</h1>
+	<p>Feat. Paw Paw <b>Freakin</b> Gump</p>
+	<p>Watch a Crick <br>
+	CALL LIGHTENING</p>
+	<a href="https://google.com" target="_blank" title="let's go to google">Click Me!!</a>
+	<img src="img/moonshine.jpg">
+</body>
+<html>
