--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 	<h1>Moonshine Cybin Fan Account</h1>
 	<p>Feat. Paw Paw <b>Freakin</b> Gump</p>
 	<p>Watch a Crick <br>
-	CALL LIGHTENING</p>
+	CALL LIGHTNING</p>
 	<a href="https://google.com" target="_blank" title="let's go to google">Click Me!!</a>
 	<img src="img/moonshine.jpg">
 </body>
