--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test page</title>
+	<title>this is the test page, sam I am</title>
 </head>
 <body>
 	<h1>Moonshine Cybin Fan Account</h1>
